SYS-803: Enable basic logging

--- a/.docker-compose_django.env
+++ b/.docker-compose_django.env
@@ -2,6 +2,9 @@
 
 DJANGO_RUN_ENV=dev
 
+# DEBUG, INFO, WARNING, ERROR, CRITICAL
+DJANGO_LOG_LEVEL=INFO
+
 # For database
 DJANGO_DB_USER=oh_owner
 DJANGO_DB_PASS=oh_owner_secret
