--- a/.docker-compose_django.env
+++ b/.docker-compose_django.env
@@ -10,6 +10,9 @@ DJANGO_DB_USER=oh_owner
 DJANGO_DB_PASSWORD=oh_owner_secret
 DJANGO_DB_DSN=db:1521/xepdb1
 
+# Directory containing files "uploaded" by staff
+DJANGO_DLCS_FILE_SOURCE=.
+
 # For createsuperuser
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_PASSWORD=admin
