--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -28,6 +28,9 @@ spec:
             - name: http
               containerPort: 8000
               protocol: TCP
+          volumeMounts:
+            - name: {{ .Values.volume.name }}
+              mountPath: {{ .Values.volume.podMountPath }}
           livenessProbe:
             httpGet:
               path: /upload_file
@@ -44,6 +47,11 @@ spec:
                   value: {{ range .Values.django.env.allowed_hosts }}{{ . }}{{ end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+      volumes:
+        - name: {{ .Values.volume.name }}
+          nfs:
+            server: {{ .Values.volume.nfsServer }}
+            path: {{ .Values.volume.nfsMountPath }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
