--- a/charts/Chart.yaml
+++ b/charts/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
 appVersion: "0.1"
-description: Chart for new DLCS Staff UI
+description: Chart for DLCS Staff UI
 name: dlcs-staff-ui
-version: 0.0.1
+version: 0.0.2
