--- a/.docker-compose_django.env
+++ b/.docker-compose_django.env
@@ -13,8 +13,8 @@ DJANGO_DB_DSN=db:1521/xepdb1
 # Directory containing files "uploaded" by staff.
 # Relative path, starting top level of Django project
 DJANGO_DLCS_FILE_SOURCE=samples
-# Or absolute path
-DJANGO_DLCS_FILE_SOURCE=/home/django/dlcs-staff-ui/samples
+# Or absolute path, if preferred
+#DJANGO_DLCS_FILE_SOURCE=/home/django/dlcs-staff-ui/samples
 
 # For createsuperuser
 DJANGO_SUPERUSER_USERNAME=admin
