SYS-839: Replace directory-based file picker with Django server-based one (#31)
* SYS-839: Replace directory-based file picker with Django server-based one

* Comment out the unused DJANGO_DLCS_FILE_SOURCE option

--- a/.docker-compose_django.env
+++ b/.docker-compose_django.env
@@ -10,8 +10,11 @@ DJANGO_DB_USER=oh_owner
 DJANGO_DB_PASSWORD=oh_owner_secret
 DJANGO_DB_DSN=db:1521/xepdb1
 
-# Directory containing files "uploaded" by staff
-DJANGO_DLCS_FILE_SOURCE=.
+# Directory containing files "uploaded" by staff.
+# Relative path, starting top level of Django project
+DJANGO_DLCS_FILE_SOURCE=samples
+# Or absolute path, if preferred
+#DJANGO_DLCS_FILE_SOURCE=/home/django/dlcs-staff-ui/samples
 
 # For createsuperuser
 DJANGO_SUPERUSER_USERNAME=admin
