Fix secret name to match target from externalsecrets resource

--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -23,7 +23,7 @@ spec:
             - configMapRef:
                 name: {{ include "dlcs-staff-ui.fullname" . }}-configmap
             - secretRef:
-                name: {{ template "dlcs-staff-ui.fullname" . }}-externalsecret
+                name: {{ include "dlcs-staff-ui.fullname" . }}-secrets
           ports:
             - name: http
               containerPort: 8000
