--- a/.docker-compose_django.env
+++ b/.docker-compose_django.env
@@ -16,6 +16,19 @@ DJANGO_DLCS_FILE_SOURCE=samples
 # Or absolute path, if preferred
 #DJANGO_DLCS_FILE_SOURCE=/home/django/dlcs-staff-ui/samples
 
+# Various media directories for processed files
+# Relative paths for development, absolute for real mounts
+# Oral History source files
+DJANGO_OH_LIBPARTNERS=media_dev/oh_source
+#DJANGO_OH_LIBPARTNERS=/media/oh_source
+# Masters "shadow landing zone"
+DJANGO_OH_MASTERSLZ=media_dev/oh_lz
+#DJANGO_OH_MASTERSLZ=/media/oh_lz
+# Wowza
+DJANGO_OH_WOWZA=media_dev/oh_wowza
+#DJANGO_OH_WOWZA=/media/oh_wowza
+
+
 # For createsuperuser
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_PASSWORD=admin
