--- a/charts/templates/configmap.yaml
+++ b/charts/templates/configmap.yaml
@@ -12,3 +12,6 @@ data:
   DJANGO_DB_DSN: {{ .Values.django.env.db_dsn }}
   DJANGO_DB_USER: {{ .Values.django.env.db_user }}
   DJANGO_DLCS_FILE_SOURCE: {{ .Values.django.env.dlcs_file_source }}
+  DJANGO_OH_LIBPARTNERS: {{ .Values.django.env.oh_libpartners }}
+  DJANGO_OH_MASTERSLZ: {{ .Values.django.env.oh_masterslz }}
+  DJANGO_OH_WOWZA: {{ .Values.django.env.oh_wowza }}
