Add path value to persistentvolume setup

--- a/charts/templates/pv-ohsource.yaml
+++ b/charts/templates/pv-ohsource.yaml
@@ -9,6 +9,6 @@ spec:
     - {{ .Values.persistentVolumes.ohsource.access }}
   nfs:
     server: {{ .Values.persistentVolumes.ohsource.server | quote }}
-    path: "/"
+    path: {{ .Values.persistentVolumes.ohsource.path | quote }}
   mountOptions:
     - nfsvers=3
