--- a/charts/templates/pv-ohwowza.yaml
+++ b/charts/templates/pv-ohwowza.yaml
@@ -9,6 +9,6 @@ spec:
     - {{ .Values.persistentVolumes.ohwowza.access }}
   nfs:
     server: {{ .Values.persistentVolumes.ohwowza.server | quote }}
-    path: "/"
+    path: {{ .Values.persistentVolumes.ohwowza.path | quote }}
   mountOptions:
     - nfsvers=3
