--- a/charts/templates/pv-ohmasters.yaml
+++ b/charts/templates/pv-ohmasters.yaml
@@ -9,6 +9,6 @@ spec:
     - {{ .Values.persistentVolumes.ohmasters.access }}
   nfs:
     server: {{ .Values.persistentVolumes.ohmasters.server | quote }}
-    path: "/"
+    path: {{ .Values.persistentVolumes.ohmasters.path | quote }}
   mountOptions:
     - nfsvers=3
