Update externalsecrets resource for newer formatting

--- a/charts/templates/externalsecret.yaml
+++ b/charts/templates/externalsecret.yaml
@@ -14,7 +14,9 @@ spec:
   target:
     name: {{ include "dlcs-staff-ui.fullname" . }}-secrets
   data:
-    - key: {{ .Values.django.externalSecrets.env.django_secret_key }}
-      name: "DJANGO_SECRET_KEY"
-    - key: {{ .Values.django.externalSecrets.env.db_password }}
-      name: "DJANGO_DB_PASSWORD"
+    - secretKey: "DJANGO_SECRET_KEY"
+      remoteRef:
+        key: {{ .Values.django.externalSecrets.env.django_secret_key }}
+    - secretKey: "DJANGO_DB_PASSWORD"
+      remoteRef:
+        key: {{ .Values.django.externalSecrets.env.db_password }}
