SYS-853: Update modules/settings/environment for deployment

--- a/.docker-compose_django.env
+++ b/.docker-compose_django.env
@@ -1,7 +1,19 @@
 # Arbitrary values used during development, not real, OK for github
 
+# Can be 'dev' or 'test' or prod' (this application defaults to 'dev' if this value not set)
 DJANGO_RUN_ENV=dev
 
+# 'Secret' key for dev only
+DJANGO_SECRET_KEY='django-insecure--g3--6#6p%adl64&qdc$1_stwuk&hn50%gomt9@hnvx#(6ehm*'
+
+# For dev only
+DJANGO_DEBUG=True
+
+# Comma separated list of allowed hosts
+# https://docs.djangoproject.com/en/4.0/ref/settings/#allowed-hosts
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,[::1]
+
+# Logging
 # DEBUG, INFO, WARNING, ERROR, CRITICAL
 DJANGO_LOG_LEVEL=INFO
 
