SYS-879: Fix bug with None in get_local_root_dir()

--- a/.docker-compose_django.env
+++ b/.docker-compose_django.env
@@ -39,6 +39,9 @@ DJANGO_OH_MASTERSLZ=media_dev/oh_lz
 # Wowza
 DJANGO_OH_WOWZA=media_dev/oh_wowza
 #DJANGO_OH_WOWZA=/media/oh_wowza
+# Static files
+DJANGO_OH_STATIC=media_dev/oh_static
+#DJANGO_OH_STATIC=/media/oh_static
 
 
 # For createsuperuser
