--- a/charts/templates/configmap.yaml
+++ b/charts/templates/configmap.yaml
@@ -14,4 +14,6 @@ data:
   DJANGO_DLCS_FILE_SOURCE: {{ .Values.django.env.dlcs_file_source }}
   DJANGO_OH_LIBPARTNERS: {{ .Values.django.env.oh_libpartners }}
   DJANGO_OH_MASTERSLZ: {{ .Values.django.env.oh_masterslz }}
+  # oh_static is not yet mounted: https://jira.library.ucla.edu/browse/SYS-862
+  #DJANGO_OH_STATIC: {{ .Values.django.env.oh_static }}
   DJANGO_OH_WOWZA: {{ .Values.django.env.oh_wowza }}
