--- a/.github/workflows/build_docker_hub.yml
+++ b/.github/workflows/build_docker_hub.yml
@@ -9,20 +9,30 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Read chart yaml to get version for docker tag
+        id: yaml-data
+        uses: KJ002/read-yaml@1.6
+        with:
+          file: 'charts/test-dlcsstaffui-values.yaml'
+          key-path: '["image", "tag"]'
+
+      - name: Display yaml info
+        run: echo "${{ steps.yaml-data.outputs.data }}"
+
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           context: .
           push: true
-          tags: uclalibrary/dlcs-staff-ui:latest
+          tags: uclalibrary/dlcs-staff-ui:${{ steps.yaml-data.outputs.data }}
