--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -48,6 +48,8 @@ django:
     # oh_static is not yet mounted: https://jira.library.ucla.edu/browse/SYS-862
     #oh_static: ""
     oh_wowza: ""
+    # Meaningless value for triggering ArgoCD deploys
+    trigger_deploy: ""
 
   externalSecrets:
     enabled: "false"
