--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -45,8 +45,7 @@ django:
     target_port: ""
     oh_libpartners: ""
     oh_masterslz: ""
-    # oh_static is not yet mounted: https://jira.library.ucla.edu/browse/SYS-862
-    #oh_static: ""
+    oh_static: ""
     oh_wowza: ""
     # Meaningless value for triggering ArgoCD deploys
     trigger_deploy: ""
@@ -71,6 +70,11 @@ persistentVolumes:
     server: ""
     path: ""
   ohwowza:
+    storage: ""
+    access: ""
+    server: ""
+    path: ""
+  ohstatic:
     storage: ""
     access: ""
     server: ""
