--- a/charts/templates/configmap.yaml
+++ b/charts/templates/configmap.yaml
@@ -8,6 +8,7 @@ metadata:
 data:
   DJANGO_RUN_ENV: {{ .Values.django.env.run_env }}
   DJANGO_DEBUG: {{ .Values.django.env.debug | quote }}
+  DJANGO_LOG_LEVEL: {{ .Values.django.env.log_level }}
   DJANGO_ALLOWED_HOSTS: {{ range .Values.django.env.allowed_hosts }}{{ . | quote }}{{ end }}
   DJANGO_DB_DSN: {{ .Values.django.env.db_dsn }}
   DJANGO_DB_USER: {{ .Values.django.env.db_user }}
@@ -16,5 +17,3 @@ data:
   DJANGO_OH_MASTERSLZ: {{ .Values.django.env.oh_masterslz }}
   DJANGO_OH_STATIC: {{ .Values.django.env.oh_static }}
   DJANGO_OH_WOWZA: {{ .Values.django.env.oh_wowza }}
-  # Meaningless value for triggering ArgoCD deploys
-  DJANGO_TRIGGER_DEPLOY: {{ .Values.django.env.trigger_deploy | quote }}
