SYS-912: Add 'use_test_dirs' variable, and point application to production

--- a/.docker-compose_django.env
+++ b/.docker-compose_django.env
@@ -28,6 +28,11 @@ DJANGO_DLCS_FILE_SOURCE=samples
 # Or absolute path, if preferred
 #DJANGO_DLCS_FILE_SOURCE=/home/django/dlcs-staff-ui/samples
 
+# Use "test" directories?  Was based on DJANGO_RUN_ENV but can't use that
+# when in production on test k8s environment.
+# Use "Yes" and "No" here.
+DJANGO_USE_TEST_DIRS=No
+
 # Various media directories for processed files
 # Relative paths for development, absolute for real mounts
 # Oral History source files
