Quote use_test_dirs

--- a/charts/templates/configmap.yaml
+++ b/charts/templates/configmap.yaml
@@ -17,4 +17,4 @@ data:
   DJANGO_OH_MASTERSLZ: {{ .Values.django.env.oh_masterslz }}
   DJANGO_OH_STATIC: {{ .Values.django.env.oh_static }}
   DJANGO_OH_WOWZA: {{ .Values.django.env.oh_wowza }}
-  DJANGO_USE_TEST_DIRS: {{ .Values.django.env.use_test_dirs }}
+  DJANGO_USE_TEST_DIRS: {{ .Values.django.env.use_test_dirs | quote }}
